# sturdy-doodle

./: .gitignore  BLOG.md  CHANGELOG.md  README.md  SETUP.md  _train_unsloth.py  demo-quick.sh  demo.sh  environment-snapshot.py  environment_snapshot.py  harness_sweep.py  harness_telemetry.py  install-mnemosyne.sh  mnemosyne-experiments.py  mnemosyne-wizard.sh  mnemosyne_adapter_claude_code.py  mnemosyne_avatar.py  mnemosyne_batch.py  mnemosyne_brain.py  mnemosyne_compactor.py  mnemosyne_config.py  mnemosyne_continuity.py  mnemosyne_datagen.py  mnemosyne_experiments.py  mnemosyne_identity.py  mnemosyne_instinct.py  mnemosyne_memory.py  mnemosyne_models.py  mnemosyne_permissions.py  mnemosyne_pipeline.py  mnemosyne_predictions.py  mnemosyne_serve.py  mnemosyne_skills.py  mnemosyne_skills_builtin.py  mnemosyne_tool_parsers.py  mnemosyne_train.py  mnemosyne_triage.py  notion_search.py  obsidian_search.py  pyproject.toml  (+4 more)
.github/workflows/: ci.yml
bench/: README.md  jailbreak.py  locomo.py  requirements.txt
docs/: ARCHITECTURE.md  ARTICLE.md  BENCHMARKS_v0.7.md  COGNITIVE_OS.md  CONTEXT-DROP.md  DEMO.md  HARNESS.md  LOCAL_MODELS.md  MEMORY_TIERS.md  POSITIONING.md  ROADMAP.md  SECURITY.md  TRAINING.md  UI.md  VISION.md  WIRING.md
docs/articles/: v0.2-original-blog.md  v0.8-launch-substack.md  v0.8-x-thread.md
docs/benchmark-results/: 2026-04-17-continuity-gemma4-e4b.json  2026-04-17-continuity-gemma4-v0.9.6.json  2026-04-17-continuity-qwen3.5-9b-v0.9.6.json
docs/images/: README.md
examples/: sweep_demo.py
mnemosyne_ui/static/: app.js  avatar.js  index.html  style.css
scenarios/: continuity.jsonl
tests/: test_all.py
