[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mnemosyne-harness"
version = "0.2.0"
description = "Meta-Harness-aligned observability + evaluation substrate for local-first LLM agents"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "atxgreene" }]
keywords = ["llm", "agent", "harness", "observability", "mnemosyne", "meta-harness"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# Zero runtime dependencies. Stdlib only, as documented throughout.
dependencies = []

[project.optional-dependencies]
# Only for developers working on this repo. No runtime users need these.
dev = []
# Training bridge (mnemosyne-train). Only needed when you actually run
# `mnemosyne-train train`. Export, compress, deploy, eval all work
# without these.
train = [
    "unsloth>=2025.11",
    "datasets>=3.0",
    "transformers>=4.45",
    "trl>=0.12",
    "peft>=0.13",
    "accelerate>=1.0",
]

[project.urls]
Repository = "https://github.com/atxgreene/sturdy-doodle"
Architecture = "https://github.com/atxgreene/sturdy-doodle/blob/main/docs/ARCHITECTURE.md"

# Each entry below creates an executable command on $PATH after `pip install`.
# The command name on the left stays hyphenated (UX); the module target on the
# right uses the canonical underscore name.
[project.scripts]
mnemosyne-experiments  = "mnemosyne_experiments:main"
mnemosyne-pipeline     = "mnemosyne_pipeline:main"
environment-snapshot   = "environment_snapshot:main"
obsidian-search        = "obsidian_search:main"
notion-search          = "notion_search:main"
harness-telemetry      = "harness_telemetry:_main_smoke"
mnemosyne-models       = "mnemosyne_models:_main"
mnemosyne-memory       = "mnemosyne_memory:_main"
mnemosyne-triage       = "mnemosyne_triage:_main"
mnemosyne-proposer     = "mnemosyne_proposer:_main"
mnemosyne-dreams       = "mnemosyne_dreams:_main"
mnemosyne-apply        = "mnemosyne_apply:_main"
mnemosyne-scengen      = "mnemosyne_scengen:_main"
mnemosyne-goals        = "mnemosyne_goals:_main"
mnemosyne-mcp          = "mnemosyne_mcp:_main"
mnemosyne-serve        = "mnemosyne_serve:_main"
mnemosyne-train        = "mnemosyne_train:_main"

[tool.setuptools]
# Flat layout: every module lives at the repo root. No src/ directory.
# This matches the project's philosophy of being immediately readable/
# hackable without a build step. `pip install -e .` still creates proper
# console entry points via the [project.scripts] table above.
py-modules = [
    "mnemosyne_config",
    "harness_telemetry",
    "harness_sweep",
    "scenario_runner",
    "mnemosyne_pipeline",
    "mnemosyne_experiments",
    "environment_snapshot",
    "obsidian_search",
    "notion_search",
    # v1 agent-framework modules (see docs/ARCHITECTURE.md)
    "mnemosyne_memory",
    "mnemosyne_models",
    "mnemosyne_skills",
    "mnemosyne_brain",
    "mnemosyne_identity",
    # v1.1 self-healing feedback loop (CREAO/Peter-Pang-inspired)
    "mnemosyne_triage",
    # v1.2 novel architectural primitives — see docs/ROADMAP.md
    "mnemosyne_proposer",
    "mnemosyne_dreams",
    "mnemosyne_inner",
    # v0.2.0 rigor pass: shippability surface
    "mnemosyne_serve",
    "mnemosyne_apply",
    "mnemosyne_embeddings",
    "mnemosyne_scengen",
    "mnemosyne_goals",
    "mnemosyne_mcp",
    # v0.2.0 training bridge (Hermes-compatible export; Unsloth training;
    # LM Studio / Ollama deploy; A/B eval). See docs/TRAINING.md.
    "mnemosyne_train",
    # v0.2.3 extended model + skill support (ported from Hermes Agent):
    #   - tool-call parsers for text-embedded formats (Hermes/Qwen/
    #     Mistral/Llama-3 tags) that unquantized local models emit
    #     instead of structured tool_calls fields
    #   - curated 11-skill library (fs / http / git / sqlite / shell)
    "mnemosyne_tool_parsers",
    "mnemosyne_skills_builtin",
]

[tool.setuptools.package-data]
"*" = ["scenarios.example.jsonl", "scenarios/*.jsonl"]
